syntax = "proto3";

option go_package = "./pb";

package pb;


//model
message User {
  int64 id = 1;
  string mobile = 2;
  string nickname = 3;
  int64  sex = 4;
  string avatar = 5;
  string info = 6;
  string location = 7;
}

message UserAuth {
  int64  id = 1;
  int64  userId = 2;
  string authType = 3;
  string authKey = 4;
}


//service
service UserService {
  // ============================ 用户鉴权 =======================
  // 登录
  rpc login(LoginReq) returns(LoginResp);
  // 注册
  rpc register(RegisterReq) returns(RegisterResp);
  // 获取某个用户平台key
  rpc getUserAuthByAuthKey(GetUserAuthByAuthKeyReq) returns(GetUserAuthByAuthKeyResp);
  // 获取某个用户平台key
  rpc getUserAuthByUserId(GetUserAuthByUserIdReq) returns(GetUserAuthyUserIdResp);
  // 生成token
  rpc generateToken(GenerateTokenReq) returns(GenerateTokenResp);


  // ============================ 用户操作 =======================

  // 获取某个用户信息
  rpc getUserInfo(GetUserInfoReq) returns(GetUserInfoResp);

  // 修改用户信息
  rpc editUserInfo(EditUserInfoReq) returns(EditUserInfoResp);


  // ============================ 用户关系 =======================
  // 关注对方
  rpc follow(FollowReq) returns(FollowResp);
  // 取关对方
  rpc unFollow(UnFollowReq) returns(UnFollowResp);
  // 获取用户好友列表
  rpc getFriendListByUserID(GetFriendListByUserIDReq) returns(GetFriendListByUserIDResp);
  // 获取粉丝列表
  rpc getFansListByUserID(GetFansListByUserIDReq) returns(GetFansListByUserIDResp);
  // 获取关注列表
  rpc getFollowedListByUserID(GetFollowedListByUserIDReq) returns(GetFollowedListByUserIDResp);
  // 获取传入的所有用户之间的共同好友
  rpc getMutualFriends(GetMutualFriendsReq) returns(GetMutualFriendsResp);
  // 获取共同关注
  rpc getMutualFollowed(GetMutualFollowedReq) returns(GetMutualFollowedResp);

}

// ================================ 用户鉴权 ====================================

//req 、resp
message RegisterReq {
  string mobile = 1;
  string nickname = 2;
  string password = 3;
  string authKey = 4;
  string authType = 5;
}
message RegisterResp {
  string accessToken = 1;
  int64  accessExpire = 2;
  int64  refreshAfter = 3;
}

message LoginReq {
  string  authType = 1;
  string authKey = 2;
  string  password = 3;
}
message LoginResp {
  string accessToken = 1;
  int64  accessExpire = 2;
  int64  refreshAfter = 3;
}

message GetUserInfoReq {
  int64  id = 1;
}
message GetUserInfoResp {
  User user = 1;
}
message EditUserInfoReq {
  User user = 1;
}
message EditUserInfoResp {
  string retMsg = 1;
  uint32 retCode = 2;
}
message GetUserAuthByAuthKeyReq {
  string  authKey = 1;
  string  authType = 2;
}
message GetUserAuthByAuthKeyResp {
  UserAuth userAuth = 1;
}

message GetUserAuthByUserIdReq {
  int64  userId = 1;
  string  authType = 2;
}
message GetUserAuthyUserIdResp {
  UserAuth userAuth = 1;
}

message GenerateTokenReq {
  int64 userId = 1;
}
message GenerateTokenResp {
  string accessToken = 1;
  int64  accessExpire = 2;
  int64  refreshAfter = 3;
}

// ================================ 用户关系 ====================================
message GetMutualFollowedResp {
  repeated User  userList = 1;
  int64 total = 2;
}
message GetMutualFollowedReq {
  int64  userId = 1;
  int64  followed = 2;
  int64 pageSize = 3;
}
message GetMutualFriendsReq {
  repeated int64  userIds = 1;
  int64 pageSize = 2;
}
message GetMutualFriendsResp {
  repeated User userList = 1;
  int64 total = 2;
}
message GetFollowedListByUserIDReq {
  int64 userId = 1;
  int64 pageSize = 2;
  int64 pageNo = 3;
}
message GetFollowedListByUserIDResp {
  repeated User userList = 1;
}
message GetFriendListByUserIDReq {
  int64 userId = 1;
  int64 pageSize = 2;
  int64 pageNo = 3;
}
message GetFriendListByUserIDResp {
  repeated User userList = 1;
}

message GetFansListByUserIDReq {
  int64 userId = 1;
  int64 pageSize = 2;
  int64 pageNo = 3;
}
message GetFansListByUserIDResp {
  repeated User userList = 1;
}

message FollowReq {
  int64   userId = 1;
  int64   followBy = 2;
  string  authKey = 3;
  string  authType = 4;
}
message UnFollowReq {
  int64 userId = 1;
  int64 followBy = 2;
  string  authKey = 3;
  string  authType = 4;
}
message FollowResp {
  string retMsg = 1;
  uint32 retCode = 2;
}
message UnFollowResp {
  string retMsg = 1;
  uint32 retCode = 2;
}
